[package]
name = "griddiagrams-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
csv = "1.4.0"
dashmap = "6.1.0"
evmap = "11.0.0"
plotters = "0.3.7"
rand = "0.10.1"
rayon = "1.11.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
