[package]
name = "griddiagrams-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.4.0"
dashmap = "6.1.0"
evmap = "11.0.0"
rayon = "1.11.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
